# todolist

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  filters.py  pyproject.toml  requirements.txt
.github/workflows/: action.yaml
bot/: functions.py  models.py  serializers.py  setializers.py  urls.py  utils.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_alter_tguser_tg_user_id.py  0003_tguser_first_name_tguser_last_name_tguser_username.py  0004_tguser_verification_code.py  0005_rename_user_id_tguser_user.py
bot/tg/: client.py  dc.py  my_test_tg.py
core/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_birthdate_alter_user_image.py  0003_alter_user_username.py  0004_alter_user_username.py  0005_user_verification_code.py
goals/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_goal.py  0003_goal_due_date.py  0004_goal_user.py  0005_alter_goal_user.py  0006_goal_description.py  0007_alter_goal_category.py  0008_goalcomment.py  0009_board.py  0010_boardparticipant.py  0011_goalcategory_board.py  0012_create_new_objects.py  0013_alter_goalcategory_board.py
tests/: simple_test.py
tests/core/: user_create_test.py
todolist/: settings.py  urls.py
