[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["arjuna <amanitocornholio@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
psycopg2 = "^2.9.6"
pillow = "^10.0.0"
djoser = "^2.2.0"
jinja2 = "^3.1.2"
faker = "^18.11.2"
social-auth-app-django = "^5.2.0"
social-auth-core = "^4.4.2"
django-filter = "^23.2"
pyjwt = "^2.7.0"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
